--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
     ></script>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">WorthyCs</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Homepage</a>
+            <a class="nav-link" href="#">IT</a>
+            <a class="nav-link" href="#">HealthCare</a>
+            <a class="nav-link" href="#">Finance</a>
+            <a class="nav-link" href="#">Engineering</a>
+            <a class="nav-link" href="#">Education</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <h1>Career paths that has the most job opportunities in South Africa</h1>
   </body>
 </html>
