--- a/index.html
+++ b/index.html
@@ -34,16 +34,91 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Homepage</a>
-            <a class="nav-link" href="#">IT</a>
-            <a class="nav-link" href="#">HealthCare</a>
-            <a class="nav-link" href="#">Finance</a>
-            <a class="nav-link" href="#">Engineering</a>
-            <a class="nav-link" href="#">Education</a>
+            <a class="nav-link active" aria-current="page" href="/">Homepage</a>
+            <a class="nav-link" href="/it.html">IT</a>
+            <a class="nav-link" href="/healthcare.html">HealthCare</a>
+            <a class="nav-link" href="/finance.html">Finance</a>
+            <a class="nav-link" href="/engineering.html">Engineering</a>
+            <a class="nav-link" href="/education.html">Education</a>
           </div>
         </div>
       </div>
     </nav>
     <h1>Career paths that has the most job opportunities in South Africa</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3 border">
+          <div class="card" style="width: 18rem">
+            <img src="/images/itAbout.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/images/healthcareAbout.webp"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/images/financeAbout.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/images/engineeringAbout.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem">
+            <img
+              src="/images/educationAbout.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
