added content description,title then added content to the homepage, encluding some css on the cards. I also added links format

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="worthy career paths in South Africa. Courses that will guarantee you a job in South Africa.IT courses, healthcare courses, education courses,Engineering courses and finance courses. "
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +14,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>
+      A list of courses that will land you a job in South Africa-WorthyCs
+    </title>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -18,48 +24,55 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">WorthyCs</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Homepage</a>
-            <a class="nav-link" href="/it.html">IT</a>
-            <a class="nav-link" href="/healthcare.html">HealthCare</a>
-            <a class="nav-link" href="/finance.html">Finance</a>
-            <a class="nav-link" href="/engineering.html">Engineering</a>
-            <a class="nav-link" href="/education.html">Education</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <h1>Career paths that has the most job opportunities in South Africa</h1>
     <div class="container">
-      <div class="row">
-        <div class="col-sm-3 border">
-          <div class="card" style="width: 18rem">
-            <img src="/images/itAbout.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">WorthyCs</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="/"
+                >Homepage</a
+              >
+              <a class="nav-link" href="/it.html">IT</a>
+              <a class="nav-link" href="/healthcare.html">HealthCare</a>
+              <a class="nav-link" href="/finance.html">Finance</a>
+              <a class="nav-link" href="/engineering.html">Engineering</a>
+              <a class="nav-link" href="/education.html">Education</a>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card" style="width: 18rem">
+      </nav>
+
+      <h1>Career paths with a lot of job opportunities in South Africa</h1>
+
+      <div class="row">
+        <div class="col-sm">
+          <div class="card border-primary mb-3" style="width: 20rem">
+            <img src="/images/itAbout.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                IT courses have high job opportunities because of the increasing
+                demand for technology skills across industries. The diverse
+                specializations within IT, including software development,
+                cybersecurity, and data science, cater to various career paths.
+              </p>
+              <a href="">View Courses</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card border-primary mb-3" style="width: 20rem">
             <img
               src="/images/healthcareAbout.webp"
               class="card-img-top"
@@ -67,14 +80,19 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                The aging population, advancements in medical technology, and
+                increasing emphasis on preventive care contribute to this
+                demand. Diverse specializations within healthcare, such as
+                nursing, allied health professions, and healthcare
+                administration, cater to varied career paths with opportunities
+                for growth and development.
               </p>
+              <a href="">View Courses</a>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card" style="width: 18rem">
+        <div class="col-sm">
+          <div class="card border-primary mb-3" style="width: 20rem">
             <img
               src="/images/financeAbout.jpeg"
               class="card-img-top"
@@ -82,14 +100,18 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Finance plays a crucial role across various industries,
+                including corporations and government sectors. The intricate
+                nature of financial markets and regulations increases the demand
+                for skilled individuals in banking, investments, financial
+                analysis, and risk management.
               </p>
+              <a href="">View Courses</a>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card" style="width: 18rem">
+        <div class="col-sm">
+          <div class="card border-primary mb-3" style="width: 20rem">
             <img
               src="/images/engineeringAbout.jpg"
               class="card-img-top"
@@ -97,14 +119,20 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Engineering courses present ample job opportunities due to the
+                demand for skilled engineers in diverse sectors such as
+                manufacturing, construction, technology, and infrastructure
+                development. The problem-solving skills and technical expertise
+                gained through engineering education are essential for
+                addressing complex challenges and driving innovation in these
+                industries.
               </p>
+              <a href="">View Courses</a>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card" style="width: 18rem">
+        <div class="col-sm">
+          <div class="card border-primary mb-3" style="width: 20rem">
             <img
               src="/images/educationAbout.jpeg"
               class="card-img-top"
@@ -112,9 +140,14 @@
             />
             <div class="card-body">
               <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Education courses offer significant job opportunities due to the
+                continuous need for qualified educators in schools, colleges,
+                universities, and training institutions. The emphasis on
+                lifelong learning, educational reforms, and the growing
+                population contribute to the demand for educators with
+                specialized skills and expertise.
               </p>
+              <a href="">View Courses</a>
             </div>
           </div>
         </div>
