made the cards equal

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar fixed navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">WorthyCs</a>
           <button
@@ -57,60 +57,7 @@
       <h1>Career paths with a lot of job opportunities in South Africa</h1>
 
       <div class="row">
-        <div class="col-sm">
-          <div class="card border-primary mb-3" style="width: 20rem">
-            <img src="/images/itAbout.jpeg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <p class="card-text">
-                IT courses have high job opportunities because of the increasing
-                demand for technology skills across industries. The diverse
-                specializations within IT, including software development,
-                cybersecurity, and data science, cater to various career paths.
-              </p>
-              <a href="">View Courses</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="card border-primary mb-3" style="width: 20rem">
-            <img
-              src="/images/healthcareAbout.webp"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <p class="card-text">
-                The aging population, advancements in medical technology, and
-                increasing emphasis on preventive care contribute to this
-                demand. Diverse specializations within healthcare, such as
-                nursing, allied health professions, and healthcare
-                administration, cater to varied career paths with opportunities
-                for growth and development.
-              </p>
-              <a href="">View Courses</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
-          <div class="card border-primary mb-3" style="width: 20rem">
-            <img
-              src="/images/financeAbout.jpeg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <p class="card-text">
-                Finance plays a crucial role across various industries,
-                including corporations and government sectors. The intricate
-                nature of financial markets and regulations increases the demand
-                for skilled individuals in banking, investments, financial
-                analysis, and risk management.
-              </p>
-              <a href="">View Courses</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm">
+        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
           <div class="card border-primary mb-3" style="width: 20rem">
             <img
               src="/images/engineeringAbout.jpg"
@@ -131,7 +78,27 @@
             </div>
           </div>
         </div>
-        <div class="col-sm">
+        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+          <div class="card border-primary mb-3" style="width: 20rem">
+            <img
+              src="/images/healthcareAbout.webp"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">
+                The aging population, advancements in medical technology, and
+                increasing emphasis on preventive care contribute to this
+                demand. Diverse specializations within healthcare, such as
+                nursing, allied health professions, and healthcare
+                administration, cater to varied career paths with opportunities
+                for growth and development.
+              </p>
+              <a href="">View Courses</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
           <div class="card border-primary mb-3" style="width: 20rem">
             <img
               src="/images/educationAbout.jpeg"
@@ -146,6 +113,39 @@
                 lifelong learning, educational reforms, and the growing
                 population contribute to the demand for educators with
                 specialized skills and expertise.
+              </p>
+              <a href="">View Courses</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+          <div class="card border-primary mb-3" style="width: 20rem">
+            <img src="/images/itAbout.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                IT courses have high job opportunities because of the increasing
+                demand for technology skills across industries. The diverse
+                specializations within IT, including software development,
+                cybersecurity, and data science, cater to various career paths.
+              </p>
+              <a href="">View Courses</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-3 d-flex align-items-stretch">
+          <div class="card border-primary mb-3" style="width: 20rem">
+            <img
+              src="/images/financeAbout.jpeg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Finance plays a crucial role across various industries,
+                including corporations and government sectors. The intricate
+                nature of financial markets and regulations increases the demand
+                for skilled individuals in banking, investments, financial
+                analysis, and risk management.
               </p>
               <a href="">View Courses</a>
             </div>
