Added the footer to all the pages

--- a/engineering.html
+++ b/engineering.html
@@ -45,5 +45,20 @@
       </div>
     </nav>
     <h1>Engineering courses that will land you a job in South Africa</h1>
+    <br />
+    <br />
+    <hr />
+    <footer>
+      For assistance with applications you can contact me on
+      <a href="mailto:matlouphutip@gmail.com" class="link-success"
+        >matlouphutip@gmail.com</a
+      >
+      or simply reach out to me on
+      <a href="https://www.instagram.com/_littleclaything_/" class="link-danger"
+        >Instagram</a
+      >. I wish you all the best with whichever career path you choose to embark
+      on.
+    </footer>
+    <br />
   </body>
 </html>
