--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     ></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar fixed navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">WorthyCs</a>
@@ -153,5 +153,21 @@
         </div>
       </div>
     </div>
+
+    <br />
+    <br />
+    <hr />
+    <footer>
+      For assistance with applications you can contact me on
+      <a href="mailto:matlouphutip@gmail.com" class="link-success"
+        >matlouphutip@gmail.com</a
+      >
+      or simply reach out to me on
+      <a href="https://www.instagram.com/_littleclaything_/" class="link-danger"
+        >Instagram</a
+      >. I wish you all the best with whichever career path you choose to embark
+      on.
+    </footer>
+    <br />
   </body>
 </html>
