--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 addressing complex challenges and driving innovation in these
                 industries.
               </p>
-              <a href="">View Courses</a>
+              <a href="/engineering.html">View Courses</a>
             </div>
           </div>
         </div>
@@ -94,7 +94,7 @@
                 administration, cater to varied career paths with opportunities
                 for growth and development.
               </p>
-              <a href="">View Courses</a>
+              <a href="/healthcare.html">View Courses</a>
             </div>
           </div>
         </div>
@@ -114,7 +114,7 @@
                 population contribute to the demand for educators with
                 specialized skills and expertise.
               </p>
-              <a href="">View Courses</a>
+              <a href="/education.html">View Courses</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
                 specializations within IT, including software development,
                 cybersecurity, and data science, cater to various career paths.
               </p>
-              <a href="">View Courses</a>
+              <a href="/it.html">View Courses</a>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
                 for skilled individuals in banking, investments, financial
                 analysis, and risk management.
               </p>
-              <a href="">View Courses</a>
+              <a href="/finance.html">View Courses</a>
             </div>
           </div>
         </div>
