Added courses to the 5 pages

--- a/education.html
+++ b/education.html
@@ -45,6 +45,20 @@
       </div>
     </nav>
     <h1>Education courses that will lant you a job in South Africa</h1>
+    <ul>
+      <li>Postgraduate Certificate in Education (PGCE)</li>
+      <li>Diploma in Early Childhood Development (ECD)</li>
+      <li>Bachelor of Education (BEd) in Foundation Phase Teaching</li>
+      <li>Further Education and Training (FET) Certificate/Diploma</li>
+      <li>Diploma in Higher Education Studies</li>
+      <li>Bachelor of Education (BEd) in Intermediate Phase Teaching</li>
+      <li>Advanced Certificate in Education (ACE)</li>
+      <li>Diploma in Special Needs Education</li>
+      <li>
+        Bachelor of Education (BEd) in Senior Phase and Further Education
+        Training
+      </li>
+    </ul>
     <br />
     <br />
     <hr />
