--- a/engineering.html
+++ b/engineering.html
@@ -45,6 +45,19 @@
       </div>
     </nav>
     <h1>Engineering courses that will land you a job in South Africa</h1>
+    <ul>
+      <li>Bachelor of Engineering (BEng) in Mechanical Engineering</li>
+      <li>Bachelor of Engineering (BEng) in Civil Engineeringv</li>
+      <li>Bachelor of Engineering (BEng) in Electrical Engineering</li>
+      <li>National Diploma in Mechanical Engineering</li>
+      <li>National Diploma in Civil Engineering</li>
+      <li>National Diploma in Electrical Engineering</li>
+      <li>
+        Bachelor of Engineering Technology (BEngTech) in Chemical Engineering
+      </li>
+      <li>Bachelor of Engineering (BEng) in Industrial Engineering</li>
+      <li>National Diploma in Chemical Engineering</li>
+    </ul>
     <br />
     <br />
     <hr />
