--- a/finance.html
+++ b/finance.html
@@ -45,6 +45,20 @@
       </div>
     </nav>
     <h1>Finance courses that will land you a job in South Africa</h1>
+    <ul>
+      <li>Bachelor of Commerce(BCom) in Accounting</li>
+      <li>Bachelor of Business Science (BBusSc) in Finance</li>
+      <li>Diploma in Financial Management</li>
+      <li>
+        Chartered Accountancy (CA) qualification (offered by SAICA-accredited
+        institutions)
+      </li>
+      <li>Bachelor of Commerce (BCom) in Investment Management</li>
+      <li>Certificate in Financial Planning</li>
+      <li>Bachelor of Commerce (BCom) in Economics and Finance</li>
+      <li>Diploma in Banking</li>
+      <li>Bachelor of Commerce (BCom) in Financial Accounting</li>
+    </ul>
     <br />
     <br />
     <hr />
