--- a/healthcare.html
+++ b/healthcare.html
@@ -45,6 +45,17 @@
       </div>
     </nav>
     <h1>Healthcare courses that will lant you a job in South Africa</h1>
+    <ul>
+      <li>Bachelor of Nursing Science (BNurs)</li>
+      <li>Diploma in Nursing (General, Psychiatric, Community)</li>
+      <li>Bachelor of Medicine and Bachelor of Surgery (MBChB)</li>
+      <li>Diploma in Pharmacy</li>
+      <li>Bachelor of Dental Surgery (BDS)</li>
+      <li>Bachelor of Occupational Therapy</li>
+      <li>Bachelor of Physiotherapy</li>
+      <li>Diploma in Medical Laboratory Technology</li>
+      <li>Diploma in Radiography</li>
+    </ul>
     <br />
     <br />
     <hr />
