--- a/it.html
+++ b/it.html
@@ -47,6 +47,17 @@
     <h1>
       Information Technology courses that will land you a job in South Africa
     </h1>
+    <ul>
+      <li>Bachelor of Science (BSc) in Computer Science</li>
+      <li>Diploma in Information Technology</li>
+      <li>Bachelor of Information Technology (BIT)</li>
+      <li>Certificate in Software Development</li>
+      <li>Diploma in Network Engineering</li>
+      <li>Bachelor of Science (BSc) in Data Science</li>
+      <li>Certificate in Cybersecurity</li>
+      <li>Diploma in Systems Development</li>
+      <li>Bachelor of Information Systems (BIS)</li>
+    </ul>
     <br />
     <br />
     <hr />
